--- a/index.html
+++ b/index.html
@@ -7,3 +7,41 @@ body {
 }
 #content {
   background: lightyellow;
+  min-width: 200px;
+  max-width: 500px
+  padding: 50px
+  margin: auto;
+  margin-top: -50px
+  line-height: 150%;
+}
+h1 {
+  letter-spacing: 2px
+  font-size: 16px
+  text-align: center;
+}
+h2 {
+  font-size: 14px
+  text-align: center;
+} 
+h3 {
+  font-size: 12px;
+}
+</style>
+</head>
+<body>
+  <div id="content">
+    <h1>Becca Aldridge</h1>
+    <h2>Freshman in Greenville, South Carolina</h2>
+    
+    <p>I am a freshman at Bob Jones Universutt studing Business Administration in hopes to one day become a licensed in Real Estste</p>
+    <p>I joined the Colts society and I enjoy playing guitar for different meetings and during our friday chapel time</p>
+    <p>I have been going to Palmetto Baptist Church and have really enjoyed it so far. The college group and small groups are especially impactful.</p>
+    <p>I also enjoy hanging out with friends, coffee, crumble cookies, hiking, being with family, and being a helping hand for anyone in need!</p>
+    
+    <h3>EDUCATION</h3>
+    business administration<br>
+    Bob Jones University
+  </div>
+  
+</body>
+</html>
